==> portapack-mayhem/mayhem-firmware/firmware/chibios-portapack/os/hal/platforms/LPC43xx/i2c_lld.c <==
#include "ch.h"
#include "hal.h"
#define I2C_START                  0x08
#define I2C_REPEAT_START           0x10
#define I2C_ARBITRATION_LOST       0x38
#define I2C_BUS_ERROR              0x00
#define I2C_MASTER_TX_ADDR_ACK     0x18
#define I2C_MASTER_TX_ADDR_NACK    0x20
#define I2C_MASTER_TX_DATA_ACK     0x28
#define I2C_MASTER_TX_DATA_NACK    0x30
#define I2C_MASTER_RX_ADDR_ACK     0x40
#define I2C_MASTER_RX_ADDR_NACK    0x48
#define I2C_MASTER_RX_DATA_ACK     0x50
#define I2C_MASTER_RX_DATA_NACK    0x58
#define I2C_NACK                   0
#define I2C_ACK                    1
#define wakeup_isr(i2cp, msg) {                                             \
  chSysLockFromIsr();                                                       \
  if ((i2cp)->thread != NULL) {                                             \
    Thread *tp = (i2cp)->thread;                                            \
    (i2cp)->thread = NULL;                                                  \
    tp->p_u.rdymsg = (msg);                                                 \
    chSchReadyI(tp);                                                        \
  }                                                                         \
  chSysUnlockFromIsr();                                                     \
}

void i2c_lld_init(void) {
#if LPC43XX_I2C_USE_I2C0 || defined(__DOXYGEN__)
  i2cObjectInit(&I2CD0);
  I2CD0.thread = NULL;
  I2CD0.i2c    = LPC_I2C0;
  I2CD0.resources = &i2c0_resources;
#endif /* LPC43XX_I2C_USE_I2C0 */

#if LPC43XX_I2C_USE_I2C1 || defined(__DOXYGEN__)
  i2cObjectInit(&I2CD1);
  I2CD1.thread = NULL;
  I2CD1.i2c = LPC_I2C1;
  I2CD1.resources = &i2c1_resources;
#endif /* LPC43XX_I2C_USE_I2C1 */
}

void i2c_lld_start(I2CDriver *i2cp) {
  I2C_TypeDef dp = i2cp->i2c;

  /* TODO: Reset peripheral, enable clocks? */

  base_clock_enable(&i2cp->resources->base);
  branch_clock_enable(&i2cp->resources->branch);
  peripheral_reset(&i2cp->resources->reset);

  i2c_periph_set_clock(dp, i2cp->config->high_count, i2cp->config->low_count);
  i2c_periph_enable(dp);
  i2c_periph_clear_all(dp);

#if defined(LPC43XX_M4)
  #if LPC43XX_I2C_USE_I2C0 || defined(__DOXYGEN__)
    if (&I2CD0 == i2cp) {
      nvicEnableVector(I2C0_IRQn, CORTEX_PRIORITY_MASK(LPC43XX_M4_I2C_I2C0_IRQ_PRIORITY));
    }
  #endif /* LPC43XX_I2C_USE_I2C0 */

  #if LPC43XX_I2C_USE_I2C1 || defined(__DOXYGEN__)
    if (&I2CD1 == i2cp) {
      nvicEnableVector(I2C1_IRQn, CORTEX_PRIORITY_MASK(LPC43XX_M4_I2C_I2C1_IRQ_PRIORITY));
    }
  #endif /* LPC43XX_I2C_USE_I2C1 */
#endif

#if defined(LPC43XX_M0)
  nvicEnableVector(I2C0_OR_I2C1_IRQn, CORTEX_PRIORITY_MASK(LPC43XX_M0_I2C_I2C0_OR_I2C1_IRQ_PRIORITY));
#endif
}

void i2c_lld_stop(I2CDriver *i2cp) {
  I2C_TypeDef dp = i2cp->i2c;

  /* If not in stopped state then disables the I2C clock.*/
  if (i2cp->state != I2C_STOP) {
    i2c_lld_abort_operation(i2cp);

#if LPC43XX_I2C_USE_I2C0 || defined(__DOXYGEN__)
    if (&I2CD0 == i2cp) {
#if defined(LPC43XX_M4)
      nvicDisableVector(I2C0_IRQn);
#endif
#if defined(LPC43XX_M0)
#if LPC43XX_I2C_USE_I2C1
      if( I2CD1.state == I2C_STOP ) {
#endif
        // TODO: This won't work if the I2C peripherals are split between cores!
        nvicDisableVector(I2C0_OR_I2C1_IRQn);
#if LPC43XX_I2C_USE_I2C1
      }
#endif
#endif
    }
#endif /* LPC43XX_I2C_USE_I2C0 */

#if LPC43XX_I2C_USE_I2C1 || defined(__DOXYGEN__)
    if (&I2CD1 == i2cp) {
#if defined(LPC43XX_M4)
      nvicDisableVector(I2C1_IRQn);
#endif
#if defined(LPC43XX_M0)
#if LPC43XX_I2C_USE_I2C0
      if( I2CD0.state == I2C_STOP ) {
#endif
        // TODO: This won't work if the I2C peripherals are split between cores!
        nvicDisableVector(I2C0_OR_I2C1_IRQn);
#if LPC43XX_I2C_USE_I2C0
      }
#endif
#endif
    }
#endif /* LPC43XX_I2C_USE_I2C1 */

    i2c_periph_disable(dp);
    peripheral_reset(&i2cp->resources->reset);
    branch_clock_disable(&i2cp->resources->branch);
    base_clock_disable(&i2cp->resources->base);
  }
}
